syntax = "proto3";

package zksync.config.snapshot_recovery;

message SnapshotRecovery {
  optional bool enabled = 1;
  optional uint64 postgres_max_concurrency = 2;
  optional uint64 tree_chunk_size = 3;
}

